[2-Frontend-5] Se tuvo que hacer arreglos en el componente de preguntas y respuestas (fecha de publicación)

--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -74,12 +74,12 @@
                 <ion-row>
                   <ion-col size="6" class="slim">
                     <ion-button class="slim" mode="ios" fill="clear" expand="full" (click)="verDetalles(producto)">
-                      <ion-text><h2><b>Ver detalles</b></h2></ion-text>
+                      <ion-text>Ver detalles</ion-text>
                     </ion-button>
                   </ion-col>
                   <ion-col size="6" class="slim">
                     <ion-button class="slim" mode="ios" fill="clear" expand="full" (click)="agregarEnCarrito(producto)">
-                      <ion-text><h2><b>Agregar al carrito</b></h2></ion-text>
+                      <ion-text>Agregar al carrito</ion-text>
                     </ion-button>
                   </ion-col>
                 </ion-row>
