--- a/e-collective-front-end/src/theme/variables.scss
+++ b/e-collective-front-end/src/theme/variables.scss
@@ -74,6 +74,13 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-lightblue: #e4e5f1;
+  --ion-color-lightblue-rgb: 228,229,241;
+  --ion-color-lightblue-contrast: #000000;
+  --ion-color-lightblue-contrast-rgb: 0,0,0;
+  --ion-color-lightblue-shade: #c9cad4;
+  --ion-color-lightblue-tint: #e7e8f2;
 }
 
 @media (prefers-color-scheme: dark) {
