--- a/e-collective-front-end/src/app/app.component.html
+++ b/e-collective-front-end/src/app/app.component.html
@@ -16,8 +16,15 @@
             </ion-item>
 
             <div class="ion-text-center" *ngIf = "user; else noUser">
-              <h6><b>Hola, {{user.name}}</b></h6>
+              <ion-label><b>Hola, {{user.name}}</b></ion-label>
             </div> 
+
+            <ion-menu-toggle>
+              <ion-button fill="clear" expand="full" mode="ios"> <!--(click)="onClickEditarPerfil()" [routerLink]="['../perfil']"-->
+                <ion-label>Editar perfil</ion-label>
+              </ion-button>
+            </ion-menu-toggle>
+            
           </div>
         
           <ng-template #noUser>
@@ -28,15 +35,11 @@
             </ion-item>
 
             <div class="ion-text-center">
-              <h6><b>Hola, Usuario</b></h6>
+              <ion-label><b>Hola, Usuario</b></ion-label>
             </div>
           </ng-template>
 
-          <ion-menu-toggle>
-            <ion-button fill="clear" expand="full" mode="ios"> <!--(click)="onClickEditarPerfil()" [routerLink]="['../perfil']"-->
-              <ion-label>Editar perfil</ion-label>
-            </ion-button>
-          </ion-menu-toggle>
+
 
           <ion-menu-toggle>
             <ion-item lines="none" button [routerLink]="['../home']"> 
