--- a/e-collective-front-end/src/app/admin/admin-offers/admin-offers.page.html
+++ b/e-collective-front-end/src/app/admin/admin-offers/admin-offers.page.html
@@ -7,10 +7,159 @@
       <ion-label color="light">E - Collective</ion-label>
     </ion-button>
     
-    <ion-title>Administrativo</ion-title>
+    <ion-title>Administrativar ofertas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-grid>
+    <ion-row>
+
+      <ion-col size-xl="4" size-md="4" size-xs="12" >
+
+
+        <ion-card >
+          <ion-card-header lines="none">
+            <ion-card-title class="ion-text-center">Registrar oferta</ion-card-title>
+          </ion-card-header>
+      
+          <ion-card-content>
+          
+            <form [formGroup]="promoForm">
+              <ion-list>
+                
+                <ion-item>
+                  <ion-label position="floating">Código del celular *</ion-label>
+                  <ion-input formControlName="idPromo"></ion-input> 
+                </ion-item>
+          
+                <ion-text *ngIf="!promoForm.get('idPromo').valid && promoForm.get('idPromo').touched" color="danger">
+                  <p>Es necesario ingresar un código. </p>
+                </ion-text>
+          
+                <ion-item>
+                  <ion-label position="floating">Porcentaje de descuento *</ion-label>
+                  <ion-input formControlName="discount"></ion-input> 
+                </ion-item>
+          
+                <ion-text *ngIf="!promoForm.get('discount').valid && promoForm.get('discount').touched" color="danger">
+                  <p>Es necesario ingresar una marca. </p>
+                </ion-text>
+          
+              </ion-list>
+            </form>
+          
+            <ion-button 
+              expand="full" 
+              class="ion-margin-top"
+              (click)="onClickCreatePromo()"
+              mode="ios"
+            >Registrar
+            </ion-button>
+      
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
+      <ion-col size-xl="4" size-md="4" size-xs="12" >
+
+        <ion-card >
+
+          <ion-card-header lines="none">
+            <ion-card-title class="ion-text-center">Buscar producto</ion-card-title>
+          </ion-card-header>
+
+          <ion-card-content>
+            <div>
+              <form [formGroup]="searchPForm">
+                <ion-list>
+                  
+                  <ion-item>
+                    <ion-label position="floating">Código del celular *</ion-label>
+                    <ion-input formControlName="idProduct"></ion-input> 
+                  </ion-item>
+            
+                  <ion-text *ngIf="!searchPForm.get('idProduct').valid && searchPForm.get('idProduct').touched" color="danger">
+                    <p>Es necesario ingresar un identificador. </p>
+                  </ion-text>
+  
+                </ion-list>
+                <ion-button  expand="full" class="ion-margin-top" (click)="searchProduct()" mode="ios">Buscar
+                </ion-button>
+              </form>
+            </div>
+ 
+            <div *ngIf = "(product | async) && searching">
+              <h2>Resultado de la busqueda</h2>
+              <ion-list id='lista-productos'>
+                <ion-item>
+                  <ion-avatar>
+                    <img [src]="producto.imgUrl">
+                  </ion-avatar>
+                  <ion-label style="margin-left: 15px;">
+                    <h3><b>{{producto.name}} {{producto.model}}</b></h3>
+                    <h3><b>{{producto.id}}</b></h3>
+                    <h3><i>₡ {{producto.price}} c/IVA</i></h3>
+                    <h3><b>{{producto.discount}}</b></h3>
+                  </ion-label>
+                  <ion-buttons>
+                    <ion-button slot="end" fill="clear" (click) = "updateProduct(producto)">
+                      <ion-icon name="construct-outline"></ion-icon>                
+                  </ion-button> 
+    
+                  <ion-button slot="end" fill="clear" (click) = "deleteProduct(producto)">
+                  <ion-icon name="trash-outline"></ion-icon>
+                  </ion-button>
+                  </ion-buttons>
+    
+                </ion-item>
+              </ion-list>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
+      <ion-col size-xl="4" size-md="4" size-xs="12"  >
+
+        <ion-card>
+          <ion-card-header lines="none">
+            <ion-card-title class="ion-text-center">Lista de promociones</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <div>
+              <ion-list id='lista-promos'>
+                <ion-item *ngFor="let promo of promos">
+                  <ion-avatar>
+                    <img [src]="promo.imgUrl">
+                  </ion-avatar>
+                  <ion-label style="margin-left: 15px;">
+                    <h3><b>{{promo.name}} {{promo.model}}</b></h3>
+                    <h3>Código: {{promo.id}}</h3>
+                    <h3>₡ {{promo.price}} c/IVA</h3>
+                    <h3><b>Descuento: {{promo.discount}} %</b></h3>
+                  </ion-label>
+                  <ion-buttons>
+                    <ion-button slot="end" fill="clear" (click) = "updatePromo(promo)">
+                      <ion-icon name="construct-outline"></ion-icon>                
+                  </ion-button> 
+    
+                  <ion-button slot="end" fill="clear" (click) = "deletePromo(promo)">
+                  <ion-icon name="trash-outline"></ion-icon>
+                  </ion-button>
+                  </ion-buttons>
+    
+                </ion-item>
+              </ion-list>
+            </div>
+          </ion-card-content>
+
+        </ion-card>
+        
+      </ion-col>
+      
+
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
