--- a/e-collective-front-end/src/app/product-details/product-details.page.html
+++ b/e-collective-front-end/src/app/product-details/product-details.page.html
@@ -32,9 +32,9 @@
               <h1><b>{{producto.name}} {{producto.model}}</b></h1>
               <h3><b>Marca: </b>{{producto.name}}</h3>
               <h3><b>Modelo: </b>{{producto.model}}</h3>
-              <h3><b>Estado: </b>{{producto.model}}</h3>
-              <h3><b>Capacidad: </b>{{producto.model}}</h3>
-              <p align="justify"><b>Descripción: </b>El HUAWEI Y9 Prime 2019 cuenta con una línea divisoria única que hace que este diseño destaque entre el resto. En la parte posterior lisa, la textura especial de seda brilla bajo la luz y se pueden ver los detalles finos claramente. Pantalla Ultra FullView de HUAWEILa extraordinaria pantalla Ultra FullView de 6.59" HUAWEI ofrece un horizonte ultra ancho con cero muesca. Disfruta de una diversión ilimitada mientras ves vídeos, juegas o leyendo libros electrónicos, todo en una pantalla casi sin bisel. Cámara emergente automáticaLa cámara frontal aparece automáticamente en 1 segundo cuando tomas selfies y se retrae cuando hayas terminado. La cámara siempre está disponible para que puedas tomar selfies con diversión continua. Velocidad rápida, alta eficienciaEl chipset de octa-core Kirin 710F mejorado mejora eficientemente la velocidad de funcionamiento y reduce el consumo de energía. Tu teléfono funciona sin problemas, incluso si estás jugando a juegos con un uso intensivo de gráficos y streaming en directo. Almacenamiento grande de 4 GB+128 GBMantenga todos sus momentos inolvidables diarios con HUAWEI Y9 Prime 2019. Sus preciadas fotos, videos y mensajes se pueden guardar con la memoria ROM de 128 GB y almacenamiento ampliable de 512 GB. Potente bateríaLa potente batería integrada de 4000 mAh funciona con el procesador inteligente de ahorro de energía para aumentar considerablemente la eficiencia energética general del dispositivo. HUAWEI Y9 Prime 2019 puede soportar la mayoría de sus tareas diarias.</p>
+              <h3><b>Estado: </b>{{producto.condition}}</h3>
+              <h3><b>Capacidad: </b>{{producto.storage}}</h3>
+              <p align="justify"><b>Descripción: </b>{{producto.description}}</p>
             </ion-label>
           
         </ion-col>
