--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -39,9 +39,9 @@
 
 <ion-content>     
   
-  <owl-carousel-o [options]="customOptions" *ngIf=" productos.length"> 
+  <owl-carousel-o [options]="customOptions" *ngIf=" ofertas.length"> 
     <ng-container>
-      <ng-template carouselSlide *ngFor="let producto of productos">
+      <ng-template carouselSlide *ngFor="let producto of ofertas">
         <div class="slider">
           <ion-card>           
             <h1 mat-card-title style = "color: green; font-size: 2em; font-style:italic;" > 
@@ -61,12 +61,12 @@
                 <ion-row>
                   <ion-col size="6" class="slim">
                     <ion-button class="slim" mode="ios" fill="clear" expand="full" (click)="verDetalles(producto)">
-                      <ion-text><h2><b>Ver detalles</b></h2></ion-text>
+                      <ion-text><h2>Ver detalles</h2></ion-text>
                     </ion-button>
                   </ion-col>
                   <ion-col size="6" class="slim">
                     <ion-button class="slim" mode="ios" fill="clear" expand="full" (click)="agregarEnCarrito(producto)">
-                      <ion-text><h2><b>Agregar al carrito</b></h2></ion-text>
+                      <ion-text><h2>Agregar al carrito</h2></ion-text>
                     </ion-button>
                   </ion-col>
                 </ion-row>
