[2-Frontend-4] Promociones y Descuentos
Se adapto carrito para que funcione con promociones

Se adapto el icono en todas las paginas para mejora estetica

--- a/e-collective-front-end/src/app/admin/admin-employees/admin-employees.page.scss
+++ b/e-collective-front-end/src/app/admin/admin-employees/admin-employees.page.scss
@@ -23,3 +23,9 @@ ion-content {
 ion-menu-button {
     color: white;
   }
+  .logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
