--- a/e-collective-front-end/src/app/admin/admin-products/admin-products.page.scss
+++ b/e-collective-front-end/src/app/admin/admin-products/admin-products.page.scss
@@ -23,3 +23,10 @@ ion-menu-button {
   ion-searchbar {
     max-width: 600px;
   }
+
+  .logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
