--- a/e-collective-front-end/src/app/faq/faq.page.scss
+++ b/e-collective-front-end/src/app/faq/faq.page.scss
@@ -32,3 +32,10 @@ ion-card {
 ion-menu-button {
     color: white;
   }
+  
+  .logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
