--- a/e-collective-front-end/src/app/locations/locations.page.html
+++ b/e-collective-front-end/src/app/locations/locations.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     
     <ion-button mode="ios" fill="clear" slot="end" href="/home">
-      <ion-label color="light">E - Collective</ion-label>
+      <img src="\assets\images\e-collectiveWG.png" class="logo">
     </ion-button>
 
     <ion-title>Ubicaciones</ion-title>
