--- a/e-collective-front-end/src/app/locations/locations.page.scss
+++ b/e-collective-front-end/src/app/locations/locations.page.scss
@@ -15,3 +15,10 @@ ion-toolbar {
 ion-menu-button {
     color: white;
   }
+
+  .logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
