--- a/e-collective-front-end/src/app/about-us/about-us.page.scss
+++ b/e-collective-front-end/src/app/about-us/about-us.page.scss
@@ -31,3 +31,10 @@ ion-card {
 ion-menu-button {
     color: white;
   }
+
+.logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+}
