--- a/e-collective-front-end/src/app/admin/admin-employees/admin-employees.page.html
+++ b/e-collective-front-end/src/app/admin/admin-employees/admin-employees.page.html
@@ -3,8 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+
     <ion-button mode="ios" fill="clear" slot="end" href="/home">
-      <ion-label color="light">E - Collective</ion-label>
+      <img src="\assets\images\e-collectiveWG.png" class="logo">
     </ion-button>
     
     <ion-title>Administrar empleados</ion-title>
