--- a/e-collective-front-end/src/app/admin/admin-offers/admin-offers.page.scss
+++ b/e-collective-front-end/src/app/admin/admin-offers/admin-offers.page.scss
@@ -19,3 +19,10 @@ ion-content {
 ion-menu-button {
     color: white;
   }
+
+  .logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
