--- a/e-collective-front-end/src/app/admin/admin-user/admin-user.page.scss
+++ b/e-collective-front-end/src/app/admin/admin-user/admin-user.page.scss
@@ -38,3 +38,10 @@ ion-card {
 ion-menu-button {
     color: white;
   }
+
+  .logo{
+    height: 100px;
+    width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
