--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
@@ -6,12 +6,7 @@
         <ion-icon name = "close" slot = "start"></ion-icon>
       </ion-button>
     </ion-buttons>
-
   </ion-toolbar>
-
-
-
-
 </ion-header>
 
 
@@ -42,10 +37,10 @@
             <ion-col size = "6" class = "ion-align-self-center">
               <b>{{p.name}} {{p.model}}</b> <br>
               <i>Mini descripción</i>
-            </ion-col>
-
+            </ion-col>                   
+                     
             <ion-col size="3" class = "ion-align-self-center">
-              {{ p.quantity * p.price | currency:'₡' }}
+              {{ p.quantity * p.price - (0.01 *p.discount)*p.price | currency:'₡' }}
             </ion-col>
 
           </ion-row>
