[2-Frontend-4] Promociones y Descuentos
Se implementa el anuncio de manera correcta

--- a/e-collective-front-end/src/app/ad/ad.component.html
+++ b/e-collective-front-end/src/app/ad/ad.component.html
@@ -3,7 +3,7 @@
 </h1>
 
 <mat-card-content>
-  <img src="{{imagen}}"/>  
+  <img [src]="imagen"/>  
   
   <div style= "padding: 2%;">
     <div style="font-size: 200%; padding-left: 1%;  margin-bottom: 5%; font-style:italic;">
