--- a/e-collective-front-end/src/app/register/register.page.html
+++ b/e-collective-front-end/src/app/register/register.page.html
@@ -1,10 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title class="ion-text-center">Registrar usuario</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
 
-<ion-content class="container">
+  <a routerLink="">
+    <ion-img class="logo-image" src="assets/images/e-collective.png"></ion-img>
+  </a>
 
   <ion-card >
     <ion-card-header lines="none">
@@ -13,13 +11,12 @@
 
     <ion-card-content>
       <div class="ion-text-center">
-        <ion-title size="small" color="dark">Foto de perfil</ion-title>
-        <ion-avatar style="margin:auto" height="300">
+        <ion-avatar style="margin:auto; height: 100px; width: 100px">
           <img [src]="previewImage"><br>
         </ion-avatar>
     
         <input style="display:none" type="file" accept="image/*" (change)="onProfilePictureSelected($event)" #fileInput>
-        <ion-button mode="ios" fill="clear" (click)="fileInput.click()">Seleccionar</ion-button>
+        <ion-button style="max-height: 20px;" mode="ios" fill="clear" (click)="fileInput.click()">Seleccionar</ion-button>
       </div>
     
       <form [formGroup]="userForm">
@@ -70,19 +67,15 @@
       >Registrar usuario
       </ion-button>
 
-      <ion-item lines="none">
-        <h3>¿Ya tienes una cuenta?</h3>
-        <ion-button fill="clear" mode="ios" expand="full" (click)="onClickLogin()">
-          <h3>Iniciar sesión</h3>
-        </ion-button>
-        <h3>o</h3>
-        <ion-button fill="clear" mode="ios" expand="full" (click)="onClickHome()">
-          <h3>Volver al inicio</h3>
-        </ion-button>
-      </ion-item>
+      <div class="a-row" style="text-align: center">
+        <ion-text style="color:black;">
+          ¿Ya tienes una cuenta?
+          <a class="a-link-emphasis" href='/login'>Iniciar sesión</a>
+          o
+          <a class="a-link-emphasis" href='/'>Volver al inicio</a>
+        </ion-text>
 
-
-
+      </div>
 
     </ion-card-content>
   </ion-card>
