--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -15,7 +15,7 @@
           <ion-button mode="ios" fill="clear" (click)= "onClickLogin()">
             <ion-label color="light">{{user.name}}</ion-label>
           </ion-button>
-          <ion-button mode="ios" fill="clear" (click)= "onClickLogin()">
+          <ion-button mode="ios" fill="clear" (click)= "onClickLogOut()">
             <ion-label color="light">Cerrar sesión</ion-label>
           </ion-button> 
         </div>
