--- a/e-collective-front-end/src/app/register/register.page.html
+++ b/e-collective-front-end/src/app/register/register.page.html
@@ -50,7 +50,7 @@
     
           <ion-item>
             <ion-label position="floating">Contraseña *</ion-label>
-            <ion-input formControlName="contrasena"></ion-input> 
+            <ion-input type="password" formControlName="contrasena"></ion-input> 
           </ion-item>
     
           <ion-text *ngIf="!userForm.get('contrasena').valid && userForm.get('contrasena').touched" color="danger">
